@@ -23,11 +23,11 @@
 
 /*
  * @test
- * @bug 8246774
  * @summary Basic tests for prohibited magic serialPersistentFields
  * @library /test/lib
  * @modules java.base/jdk.internal.org.objectweb.asm
- * @run testng SerialPersistentFieldsTest
+ * @compile --enable-preview -source ${jdk.version} SerialPersistentFieldsTest.java
+ * @run testng/othervm --enable-preview SerialPersistentFieldsTest
  */
 
 import java.io.ByteArrayInputStream;
@@ -62,6 +62,7 @@ import static org.testng.Assert.assertTrue;
  * Checks that the serialPersistentFields declaration is effectively ignored.
  */
 public class SerialPersistentFieldsTest {
+    private static final String VERSION = Integer.toString(Runtime.version().feature());
 
     ClassLoader serializableRecordLoader;
 
@@ -82,7 +83,8 @@ public class SerialPersistentFieldsTest {
     public void setup() {
         {  // R1
             byte[] byteCode = InMemoryJavaCompiler.compile("R1",
-                    "public record R1 () implements java.io.Serializable { }");
+                    "public record R1 () implements java.io.Serializable { }",
+                    "--enable-preview", "-source", VERSION);
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("s", String.class),
                     new ObjectStreamField("i", int.class),
@@ -94,7 +96,8 @@ public class SerialPersistentFieldsTest {
         }
         {  // R2
             byte[] byteCode = InMemoryJavaCompiler.compile("R2",
-                    "public record R2 (int x) implements java.io.Serializable { }");
+                    "public record R2 (int x) implements java.io.Serializable { }",
+                    "--enable-preview", "-source", VERSION);
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("s", String.class)
             };
@@ -103,7 +106,8 @@ public class SerialPersistentFieldsTest {
         }
         {  // R3
             byte[] byteCode = InMemoryJavaCompiler.compile("R3",
-                    "public record R3 (int x, int y) implements java.io.Serializable { }");
+                    "public record R3 (int x, int y) implements java.io.Serializable { }",
+                    "--enable-preview", "-source", VERSION);
             ObjectStreamField[] serialPersistentFields = new ObjectStreamField[0];
             byteCode = addSerialPersistentFields(byteCode, serialPersistentFields);
             serializableRecordLoader = new ByteCodeLoader("R3", byteCode, serializableRecordLoader);
@@ -111,7 +115,8 @@ public class SerialPersistentFieldsTest {
         {  // R4
             byte[] byteCode = InMemoryJavaCompiler.compile("R4",
                     "import java.io.Serializable;" +
-                    "public record R4<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }");
+                    "public record R4<U extends Serializable,V extends Serializable>(U u, V v) implements Serializable { }",
+                    "--enable-preview", "-source", VERSION);
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("v", String.class)
             };
@@ -127,7 +132,8 @@ public class SerialPersistentFieldsTest {
                     "    }\n" +
                     "    @Override public void readExternal(ObjectInput in) {\n" +
                     "        throw new AssertionError(\"should not reach here\");\n" +
-                    "    }  }");
+                    "    }  }",
+                    "--enable-preview", "-source", VERSION);
             ObjectStreamField[] serialPersistentFields = {
                     new ObjectStreamField("v", String.class)
             };
